# qvm-pass

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
qubes-rpc/: qubes.PasswordStoreRead  qubes.PasswordStoreWrite
qubes-rpc/policy/: qubes.PasswordStoreWrite
qvm_pass/: cli.py
