[tool.bandit]
skips = ["B105", "B404", "B603"]

[tool.black]
target-version = ["py39", "py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "qvm-pass"
version = "0.1.1"
description = ""
license = "MIT"
authors = ["Andreas Oberritter <obi@saftware.de>"]
packages = [
    { include = "qvm_pass" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
ppretty = "^1.3"
pyperclip = "^1.8.2"
qrexec = {git = "https://github.com/QubesOS/qubes-core-qrexec", branch = "release4.1"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[tool.poetry.scripts]
pass = "qvm_pass.cli:qvm_pass"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
